--- a/.travis.yml
+++ b/.travis.yml
@@ -6,21 +6,19 @@ python:
 addons:
   chrome: stable
 install:
-  - sudo apt-get install nodejs
   - wget -N http://chromedriver.storage.googleapis.com/2.30/chromedriver_linux64.zip -P ~/
   - unzip ~/chromedriver_linux64.zip -d ~/
   - rm ~/chromedriver_linux64.zip
   - sudo mv -f ~/chromedriver /usr/local/share/
   - sudo chmod +x /usr/local/share/chromedriver
   - sudo ln -s /usr/local/share/chromedriver /usr/local/bin/chromedriver
-  - npm install -g netlify-cli
   - pip install -r requirements.txt
   - nohup sudo Xvfb :10 -ac &
   - export DISPLAY=:10
 script:
   - python motion.py
 after_success:
-  - netlify deploy -p site -s $SITE_ID -t $ACCESS_TOKEN
+  - fab deploy
 cache:
   directories:
   - site
